--- a/PARC/templates/index.html
+++ b/PARC/templates/index.html
@@ -512,9 +512,10 @@
 	            <div class="player_name">Remy Pointier</div>
 	          </div>
 	          <div class="player_text">
-	            <p>Née en 1989 Rémy commence le rugby à l'age de 7 à Annecy. A 15 ans il intègre le pôle régional à Grenoble . Il jouera ensuite à Vannes à en fédérale 1 de ses 19 à 23 ans. Suite à une blessure il est contraint d'arrêter le rugby pendant 2 ans. Il reprend en 2016 à Auray
+	            <p>Née en 1989 Rémy commence le rugby à l'age de 7 à Annecy. A 15 ans il intègre le pôle régional à Grenoble .
+								 Il jouera ensuite à Vannes à en fédérale 1 de ses 19 à 23 ans. Suite à une blessure il est contraint d'arrêter le rugby pendant 2 ans. Il reprend en 2016 à Auray
 								 club pour lequel il est salarié depuis 2014 en tant responsable de l'école de rugby.</p>
-	            <p>Rémy à la chance de vivre de ma passion, et aime se démener pour ses co-équipiers. Pour lui le rugby c'est sa deuxième famille.</p>
+	            <p>Rémy à la chance de vivre de sa passion, et aime se démener pour ses co-équipiers. Pour lui le rugby c'est sa deuxième famille.</p>
 	          </div>
 	        </div>
 	      </div>
@@ -541,9 +542,10 @@
 	            <div class="player_name">Valentin Lefranc</div>
 	          </div>
 	          <div class="player_text">
-	            <p>Valentin est née en 1989. Il joue au rugby depuis ses 19 ans et évolue au poste de demie de méléé. Ses études l'ont amené à jouer pour de nombreux clubs en france (SPRC, Le Rheu, Gif sur Yvette, Marcoussis) et à l'étranger : Bérisso en Argentine, RC Valencia en Espagne et RC Berlin en Allemagne.
-							Le rugby lui à toujours permis de s'intégrer malgré les nombreux voyages. Il est au PARC depuis 2016</p>
-	            <p>Il travail en tant que consultant en intelligence artificielle. Ses autres hobbies sont le windsurf et le football Gaélique.</p>
+	            <p>Valentin est née en 1989. Il joue au rugby depuis ses 19 ans et évolue au poste de demie de méléé.
+								Ses études l'ont amené à jouer pour de nombreux clubs en france (SPRC, Le Rheu, Gif sur Yvette, Marcoussis) et à l'étranger : Bérisso en Argentine, RC Valencia en Espagne et RC Berlin en Allemagne.
+								Le rugby lui à toujours permis de s'intégrer malgré les nombreux voyages. Il est au PARC depuis 2016</p>
+	            <p>Il travail en tant que consultant en intelligence artificielle. Ses autres passions sont le windsurf et le football Gaélique.</p>
 	          </div>
 	        </div>
 	      </div>
@@ -572,7 +574,8 @@
 	          </div>
 	          <div class="player_text">
 	            <p>Plus zèbre que sanglier Julien est née en 1999. Il est rugbyman depuis ses 4 ans et a écumé les clubs du morbihan Lanester/Lorient/Vannes/Gregam/Auray.
-								Il a toujours beaucoups joué :Sélection Bretagne (XV et seven) Section Rugby au lycée Lesage à Vannes et est actuellement président d’une association de rugby à 7. Il à aussi participé à des match en ligue allemande avec le TSV d’Heidelberg.</p>
+								Il a toujours beaucoups joué :Sélection Bretagne (XV et seven) Section Rugby au lycée Lesage à Vannes et est actuellement président d’une association de rugby à 7.
+								Il à aussi participé à des match en ligue allemande avec le TSV d’Heidelberg.</p>
 	            <p>Sa phrase « L’attitude est un choix : souhaite le meilleur pour devoir t’en donner les moyens. » Julien est également Diplômé d’une licence QSE</p>
 	          </div>
 	        </div>
@@ -601,9 +604,11 @@
 							<div class="player_name">Gaël Grand</div>
 						</div>
 						<div class="player_text">
-							<p>Gael est néé en 2001. Il effectue une L1-SVT à l'université Bretagne Sud sur Vannes, et joue au PARC depuis début septembre 2019. Il à vécu toute sa vie à Madrid. Il joue au rugby depuis ses 5 ans au Tasman Rugby Boadilla, comme 9 mais aussi 10. (champion d'Espagne avec la sélection de Madrid, en rugby XV et VII.)
+							<p>Gael est néé en 2001. Il effectue une L1-SVT à l'université Bretagne Sud sur Vannes, et joue au PARC depuis début septembre 2019.
+								Il à vécu toute sa vie à Madrid. Il joue au rugby depuis ses 5 ans au Tasman Rugby Boadilla, comme 9 mais aussi 10. (champion d'Espagne avec la sélection de Madrid,
+								 en rugby XV et VII.)
 								 </p>
-							<p>Depuis que qu'il est au PARC, il apprécie le niveau de rugby mais aussi la très bonne ambiance !</p>
+							<p>Depuis que qu'il est au PARC, il apprécie le bon niveau de rugby mais aussi la très bonne ambiance !</p>
 						</div>
 					</div>
 				</div>
@@ -633,7 +638,7 @@
 						<div class="player_text">
 							<p>Néé en 1998 Théo a commencé le rugby à l'âge de 5 ans dans le club d'Hennebont
 								puis au SKRANK. Il a repris suite à une blessure en cadet avec l'équipe de Lorient jusqu'en junior.
-								Après une année de césure rugbystique, il a repris au PARC en sébior en 2016.
+								Après une année de césure rugbystique, il a repris au PARC en sénior en 2016.
 								12/13 de formation il évolue désormais au poste de 3eme ligne.</p>
 							<p>Diplomé d'un BAC S - Il étudie à l'école d'ingénieur ICAM de Vannes.</p>
 						</div>
@@ -663,9 +668,9 @@
 							<div class="player_name">Antoine Bierent </div>
 						</div>
 						<div class="player_text">
-							<p>Néé en 1998 Antoine a commencé le rugby a l'age de 6 ans. Il joue9 ans à Hennebont, puis 6 ans à Vannes
-								avec qui il est champion de France en 2016, 2 année espoir à vannes.
-								A Auray depuis 2018 et occupe le poste de seconde ligne.
+							<p>Néé en 1998 Antoine a commencé le rugby a l'age de 6 ans. Il joue 9 ans à Hennebont, puis 6 ans à Vannes
+								avec qui il est champion de France en 2016. Il joue 2 années en espoir à vannes.
+								A Auray depuis 2018 il occupe le poste de seconde ligne.
 								</p>
 							<p>Actuellement en 3ème année STAPS à Arradon.</p>
 						</div>
@@ -698,7 +703,7 @@
 							<p>Johann est néé à Vannes en 1990, après 10 à l'école de rugby de Grand-Champs il jouera 14 ans au RCV de l'école de rugby à la fédérale 1/NationnalB.
 								Il a été sélectionné dans les équipes du morbihan, de bretagne à 15 et à 7. Il a également joué un match contre l'Irlande avec le Top 100 nationnal des moins de 17 ans.
 								</p>
-							<p>Johann est maintenant responsable E commerce et chargé de communication chez TID-Inox</p>
+							<p>Johann est maintenant responsable e-commerce et chargé de communication chez TID-Inox</p>
 						</div>
 					</div>
 				</div>
@@ -727,10 +732,10 @@
 						</div>
 						<div class="player_text">
 							<p>Joueur de Rugby a XV, au poste de 12, et à VII, joueur polyvalent.
-								Également passionné de surf et shapeur à ses temps perdus.
+								Également passionné de surf et shapeur à ses heures perdus.
 								</p>
-							<p>Actuellement en 4ème année d'école d'ingénieur en alternance à Vannes.
-							Apprenti Ingénieur Technique chez Prolarge sur projet de sous-traitance de la Marine Nationale.</p>
+							<p>Actuellement en 4ème année d'école d'ingénieur en alternance à Vannes, il est
+							apprenti Ingénieur Technique chez Prolarge sur projet de sous-traitance de la Marine Nationale.</p>
 
 						</div>
 					</div>
@@ -759,7 +764,9 @@
 							<div class="player_name">Pierrick Abiven </div>
 						</div>
 						<div class="player_text">
-							<p>Né en 1993. Pierrick a commencé le rugby à 5 ans au rugby club Plabennec. Gravissant les catégories d’âge il a également représenter la Bretagne dans l’équipe régionale. A cela s’ajoute une expérience en Argentine où il a joué au Banco Rugby Club de Mendoza pendant 6 mois.
+							<p>Né en 1993. Pierrick a commencé le rugby à 5 ans au rugby club Plabennec.
+								Gravissant les catégories d’âge il a également représenter la Bretagne dans l’équipe régionale.
+								A cela s’ajoute une expérience en Argentine où il a joué au Banco Rugby Club de Mendoza pendant 6 mois.
 								Il est a Auray auray depuis 2017.
 								</p>
 							<p>Dans la vie proffessionnel Pierrick travaille à l’observatoire de l’habitat de l’ADIL du Morbihan en tant que chargé d’études habitat.</p>
@@ -823,9 +830,13 @@
 							<div class="player_name">Sebastien Murcia </div>
 						</div>
 						<div class="player_text">
-							<p>Sébastien Murcia est né en 1973. Il a commencé le rugby sur le tard à 40 ans. Sportif dan l'ame il d'abord commencé par la natation et le foot. Ensuite la planche à voile, le surf, et maintenant le kitesurf.
+							<p>Sébastien Murcia est né en 1973.
+								 Il a commencé le rugby sur le tard à 40 ans.
+								 Sportif dan l'ame il d'abord commencé par la natation et le foot.
+								 Ensuite la planche à voile, le surf, et maintenant le kitesurf.
 								</p>
-							<p>Sébastien possède un DESS assurances après ma maitrise de droit. Il a travaillé dans les assurances et ensuite en SSII comme consultant pour ensuite s'associer avec son frère pour créer Kite Spirit.</p>
+							<p>Sébastien possède un DESS assurances après sa maitrise de droit. 
+								Il a travaillé dans les assurances et ensuite en SSII comme consultant pour ensuite s'associer avec son frère pour créer Kite Spirit à Auray.</p>
 
 						</div>
 					</div>
