--- a/PARC/templates/layout.html
+++ b/PARC/templates/layout.html
@@ -105,7 +105,7 @@
 												<div class="dropdown">
 													<p class="dropbtn">Partenaires</p>
 													<div class="dropdown-content">
-														<a href="{{ url_for('main.sponsors')}}">Acceuil</a>
+														<a href="{{ url_for('main.sponsors')}}">Accueil</a>
 														<a href="{{ url_for('main.sponsors')}}">Tous les partenaires</a>
 													</div>
 												</div>
