--- a/PARC/templates/senior.html
+++ b/PARC/templates/senior.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {%block content %}
-<title>Acceuil</title>
+<title>Accueil</title>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main_styles.css')}}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/about_home.css')}}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/about_about.css')}}">
