--- a/PARC/templates/index.html
+++ b/PARC/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {%block content %}
-<title>Acceuil</title>
+<title>Accueil</title>
 
 
 
@@ -367,7 +367,7 @@
 				<!-- Team Item -->
 				<div class="col-xl-2 col-md-4 col-sm-6">
 					<div class="team_small d-flex flex-sm-column flex-row align-items-center justify-content-sm-center justify-content-start">
-						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/pp.jpg')}}" alt=""></a><div>C</div></div>
+						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='/ArnaudJ.png')}}" alt=""></a><div>C</div></div>
 						<div class="team_small_content text-sm-center">
 							<div class="team_small_name"><a href="#">Arnaud Joubioux</a></div>
 							<div class="team_small_title">Coach U18</div>
@@ -491,7 +491,7 @@
 
 		<script type="text/javascript" language="JavaScript">
 
-		randomNumber = Math.floor(Math.random()*12+1);
+		randomNumber = Math.floor(Math.random()*14+1);
 
 		window.onload = function() {
 		        document.getElementById(randomNumber.toString()).style.display = "block";
@@ -512,7 +512,7 @@
 	            <div class="player_name">Remy Pointier</div>
 	          </div>
 	          <div class="player_text">
-	            <p>Née en 1989 Rémy commence le rugby à l'age de 7 à Annecy. A 15 ans il intègre le pôle régional à Grenoble .
+	            <p>Né en 1989 Rémy commence le rugby à l'age de 7 à Annecy. A 15 ans il intègre le pôle régional à Grenoble .
 								 Il jouera ensuite à Vannes à en fédérale 1 de ses 19 à 23 ans. Suite à une blessure il est contraint d'arrêter le rugby pendant 2 ans. Il reprend en 2016 à Auray
 								 club pour lequel il est salarié depuis 2014 en tant responsable de l'école de rugby.</p>
 	            <p>Rémy à la chance de vivre de sa passion, et aime se démener pour ses co-équipiers. Pour lui le rugby c'est sa deuxième famille.</p>
@@ -542,7 +542,7 @@
 	            <div class="player_name">Valentin Lefranc</div>
 	          </div>
 	          <div class="player_text">
-	            <p>Valentin est née en 1989. Il joue au rugby depuis ses 19 ans et évolue au poste de demie de méléé.
+	            <p>Valentin est né en 1989. Il joue au rugby depuis ses 19 ans et évolue au poste de demie de méléé.
 								Ses études l'ont amené à jouer pour de nombreux clubs en france (SPRC, Le Rheu, Gif sur Yvette, Marcoussis) et à l'étranger : Bérisso en Argentine, RC Valencia en Espagne et RC Berlin en Allemagne.
 								Le rugby lui à toujours permis de s'intégrer malgré les nombreux voyages. Il est au PARC depuis 2016</p>
 	            <p>Il travail en tant que consultant en intelligence artificielle. Ses autres passions sont le windsurf et le football Gaélique.</p>
@@ -573,7 +573,7 @@
 	            <div class="player_name">Julien Puyau </div>
 	          </div>
 	          <div class="player_text">
-	            <p>Plus zèbre que sanglier Julien est née en 1999. Il est rugbyman depuis ses 4 ans et a écumé les clubs du morbihan Lanester/Lorient/Vannes/Gregam/Auray.
+	            <p>Plus zèbre que sanglier Julien est né en 1999. Il est rugbyman depuis ses 4 ans et a écumé les clubs du morbihan Lanester/Lorient/Vannes/Gregam/Auray.
 								Il a toujours beaucoups joué :Sélection Bretagne (XV et seven) Section Rugby au lycée Lesage à Vannes et est actuellement président d’une association de rugby à 7.
 								Il à aussi participé à des match en ligue allemande avec le TSV d’Heidelberg.</p>
 	            <p>Sa phrase « L’attitude est un choix : souhaite le meilleur pour devoir t’en donner les moyens. » Julien est également Diplômé d’une licence QSE</p>
@@ -604,7 +604,7 @@
 							<div class="player_name">Gaël Grand</div>
 						</div>
 						<div class="player_text">
-							<p>Gael est néé en 2001. Il effectue une L1-SVT à l'université Bretagne Sud sur Vannes, et joue au PARC depuis début septembre 2019.
+							<p>Gael est né en 2001. Il effectue une L1-SVT à l'université Bretagne Sud sur Vannes, et joue au PARC depuis début septembre 2019.
 								Il à vécu toute sa vie à Madrid. Il joue au rugby depuis ses 5 ans au Tasman Rugby Boadilla, comme 9 mais aussi 10. (champion d'Espagne avec la sélection de Madrid,
 								 en rugby XV et VII.)
 								 </p>
@@ -636,7 +636,7 @@
 							<div class="player_name">Théo Durand </div>
 						</div>
 						<div class="player_text">
-							<p>Néé en 1998 Théo a commencé le rugby à l'âge de 5 ans dans le club d'Hennebont
+							<p>Né en 1998 Théo a commencé le rugby à l'âge de 5 ans dans le club d'Hennebont
 								puis au SKRANK. Il a repris suite à une blessure en cadet avec l'équipe de Lorient jusqu'en junior.
 								Après une année de césure rugbystique, il a repris au PARC en sénior en 2016.
 								12/13 de formation il évolue désormais au poste de 3eme ligne.</p>
@@ -668,7 +668,7 @@
 							<div class="player_name">Antoine Bierent </div>
 						</div>
 						<div class="player_text">
-							<p>Néé en 1998 Antoine a commencé le rugby a l'age de 6 ans. Il joue 9 ans à Hennebont, puis 6 ans à Vannes
+							<p>Né en 1998 Antoine a commencé le rugby a l'age de 6 ans. Il joue 9 ans à Hennebont, puis 6 ans à Vannes
 								avec qui il est champion de France en 2016. Il joue 2 années en espoir à vannes.
 								A Auray depuis 2018 il occupe le poste de seconde ligne.
 								</p>
@@ -700,7 +700,7 @@
 							<div class="player_name">Johann Kerrand </div>
 						</div>
 						<div class="player_text">
-							<p>Johann est néé à Vannes en 1990, après 10 à l'école de rugby de Grand-Champs il jouera 14 ans au RCV de l'école de rugby à la fédérale 1/NationnalB.
+							<p>Johann est né à Vannes en 1990, après 10 à l'école de rugby de Grand-Champs il jouera 14 ans au RCV de l'école de rugby à la fédérale 1/NationnalB.
 								Il a été sélectionné dans les équipes du morbihan, de bretagne à 15 et à 7. Il a également joué un match contre l'Irlande avec le Top 100 nationnal des moins de 17 ans.
 								</p>
 							<p>Johann est maintenant responsable e-commerce et chargé de communication chez TID-Inox</p>
@@ -835,7 +835,7 @@
 								 Sportif dan l'ame il d'abord commencé par la natation et le foot.
 								 Ensuite la planche à voile, le surf, et maintenant le kitesurf.
 								</p>
-							<p>Sébastien possède un DESS assurances après sa maitrise de droit. 
+							<p>Sébastien possède un DESS assurances après sa maitrise de droit.
 								Il a travaillé dans les assurances et ensuite en SSII comme consultant pour ensuite s'associer avec son frère pour créer Kite Spirit à Auray.</p>
 
 						</div>
@@ -865,9 +865,10 @@
 							<div class="player_name">Sergio Kasper</div>
 						</div>
 						<div class="player_text">
-							<p>Sergio est sud africain et a joué au Griffons et au Blue bulls. Il rejoint le PARC en 2019. Sergio à pour ambition de travailler dur pour réussir dans le rugby et la vie.
+							<p>Sergio est sud africain et a joué au Griffons et au Blue bulls.
+								Il rejoint le PARC en 2019. Sergio à pour ambition de travailler dur pour réussir dans le rugby et la vie.
 							    </p>
-							<p>Il aime le rugby bien évidement, voyager et les aventures de vie en générale</p>
+							<p>Il aime le rugby (bien évidement), voyager et les aventures de vie en générale</p>
 
 						</div>
 					</div>
@@ -882,8 +883,70 @@
 		</div>
 	</div>
 
+	<div id='13' class="player" style="display:None;">
+		<div id="joueur" class="container">
+			<div class="row">
+				<div class="col-xl-6">
+					<div class="player_content">
+						<div class="section_title_container">
+							<div class="section_title"><h1>Un(e) joueur(euse) au hasard</h1></div>
+							<div class="section_subtitle">présentation</div>
+						</div>
+						<div class="player_name_container d-flex flex-row align-items-end justify-content-start">
+							<div class="player_num">14</div>
+							<div class="player_name">Thomas Bordas</div>
+						</div>
+						<div class="player_text">
+							<p>Thomas est né le 7 aout 1997 et commence le rugby à 7 ans au CSMG rugby club en région parissionne (92).
+								Il  Déménage en Bretagne en 2011 oui il jouera pour le RCV jusqu'à ses 18 ans. Après une pose de 2 ans suite à une blessure il intègre le PARC ou il s'épanouie rugbystiquement et humainement.
+							    </p>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-6">
+					<div class="player_images d-flex flex-row align-items-end justify-content-start">
+						<div class="player_image"><img src="{{ url_for('static', filename='images/totob.png')}}" alt=""></div>
 
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
+	<div id='14' class="player" style="display:None;">
+		<div id="joueur" class="container">
+			<div class="row">
+				<div class="col-xl-6">
+					<div class="player_content">
+						<div class="section_title_container">
+							<div class="section_title"><h1>Un(e) joueur(euse) au hasard</h1></div>
+							<div class="section_subtitle">présentation</div>
+						</div>
+						<div class="player_name_container d-flex flex-row align-items-end justify-content-start">
+							<div class="player_num">2</div>
+							<div class="player_name">Félicien Bordas</div>
+						</div>
+						<div class="player_text">
+							<p>
+								Né le 13 mai 1999, talonneur (pizzaiolo) de formation mais surtout joueur polyvalent avec une cheville en mousse.
+								Joue au rugby depuis ses 5 ans.
+								Former en région parisienne dans le 92 pour arriver en Bretagne en 2011 où il découvre le club du RC vannes,
+								il y reste jusqu’à ses 18 ans et obtiendra un titre de champion de France en 2015-2016
+								La page du RCV tourné il vie maintenant une nouvelle aventure pleine d’ambition avec le PARC où il a redécouvert un club familiale avec lequel il partage les mêmes valeurs humaines et sportives.
+					</p>
+
+					</div>
+					</div>
+					</div>
+				<div class="col-xl-6">
+					<div class="player_images d-flex flex-row align-items-end justify-content-start">
+					<div class="player_image"><img src="{{ url_for('static', filename='images/fefe.png')}}" alt=""></div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 	<!-- News -->
 
