--- a/PARC/templates/index.html
+++ b/PARC/templates/index.html
@@ -367,7 +367,7 @@
 				<!-- Team Item -->
 				<div class="col-xl-2 col-md-4 col-sm-6">
 					<div class="team_small d-flex flex-sm-column flex-row align-items-center justify-content-sm-center justify-content-start">
-						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='/ArnaudJ.png')}}" alt=""></a><div>C</div></div>
+						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/ArnaudJ.png')}}" alt=""></a><div>C</div></div>
 						<div class="team_small_content text-sm-center">
 							<div class="team_small_name"><a href="#">Arnaud Joubioux</a></div>
 							<div class="team_small_title">Coach U18</div>
@@ -933,6 +933,7 @@
 								Former en région parisienne dans le 92 pour arriver en Bretagne en 2011 où il découvre le club du RC vannes,
 								il y reste jusqu’à ses 18 ans et obtiendra un titre de champion de France en 2015-2016
 								La page du RCV tourné il vie maintenant une nouvelle aventure pleine d’ambition avec le PARC où il a redécouvert un club familiale avec lequel il partage les mêmes valeurs humaines et sportives.
+								Il est aussi coach des U8.
 					</p>
 
 					</div>
