--- a/PARC/templates/jeunes.html
+++ b/PARC/templates/jeunes.html
@@ -37,7 +37,6 @@
 							<div class="section_subtitle">Responsable : Rémy </div>
 						</div>
 						<div class="info_text">
-							<p>Label FFR</p>
 							<p>Centre de Formation</p>
 						  <p>165 licenciés (5 à 19 ans)</p>
 							<p>12 éducateurs diplômés</p>
@@ -48,6 +47,33 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="row">
+
+				<!-- Info Image -->
+				<div class="col-lg-6 order-lg-1 order-2">
+					<div class="info_image">
+						<div class="background_image" style="background-image:url(static/images/labelEDR.png)"></div>
+					</div>
+				</div>
+
+				<!-- Info Content -->
+				<div class="col-lg-6 order-lg-2 order-1">
+					<div class="info_content">
+						<div class="section_title_container">
+							<div class="section_title"><h1>Les labels</h1></div>
+							<div class="section_subtitle">du PARC </div>
+						</div>
+						<div class="info_text">
+							<p> Labélisé école de rugby</p>
+							<p> Habilitation de centre de formation pour éducateurs</p>
+							</ul>
+						</div>
+
+					</div>
+				</div>
+			</div>
+
 		</div>
 
 		<div class="container" style="margin-bottom: 100px;">
