--- a/PARC/templates/jeunes.html
+++ b/PARC/templates/jeunes.html
@@ -53,7 +53,7 @@
 				<!-- Info Image -->
 				<div class="col-lg-6 order-lg-1 order-2">
 					<div class="info_image">
-						<div class="background_image" style="background-image:url(static/images/labelEDR.png)"></div>
+						<img src="{{ url_for('static', filename='images/labelEDR.png')}}" style="display: block;" alt="">
 					</div>
 				</div>
 
