--- a/PARC/templates/index.html
+++ b/PARC/templates/index.html
@@ -137,6 +137,44 @@
 		</div>
 	</div>
 
+	<div class="home_mobile">
+
+		<!-- Home Slider -->
+		<div class="home_slider_container">
+
+
+				<!-- Slide -->
+				<div class="home_slide">
+					<div class="background_image" style="background-image:url(static/images/New_1.png)"></div>
+					<div class="home_container">
+						<div class="container">
+							<div class="row">
+								<div class="col-lg-10">
+									<div class="home_content" data-animation-in="zoomInDown" data-animation-out="animate-out fadeOut">
+
+										<div  style= "margin-bottom: 5px;">
+											<div class="home_text d-flex flex-row align-items-center justify-content-start">
+													<span>Bienvenue sur le site du PARC</span>
+											</div>
+										</div>
+
+
+
+
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+
+
+
+		</div>
+	</div>
+
 	<!-- News -->
 
 
