--- a/PARC/templates/index.html
+++ b/PARC/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {%block content %}
-<title>Accueil</title>
-
+<title>Pays d'Auray Rugby Club</title>
+<meta name="description" content="pays auray rugby club" />
 
 
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main_styles.css')}}">
