--- a/PARC/templates/sponsors.html
+++ b/PARC/templates/sponsors.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {%block content %}
+<title>Auray rugby sponsor</title>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/team.css')}}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/team_responsive.css')}}">
 
