--- a/PARC/templates/blog.html
+++ b/PARC/templates/blog.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {%block content %}
+<title>PARC- BLOG</title>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/blog.css')}}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/blog_responsive.css')}}">
 	<!-- Home -->
